--- a/assets/styles.css
+++ b/assets/styles.css
@@ -150,3 +150,9 @@ body {
 /*    background-color: #3e8e41;*/
 /*}*/
 
+#dealer-cards img {
+    margin: 5px;
+    border: 5px solid #fff;
+    border-radius: 5px;
+}
+
