--- a/assets/styles.css
+++ b/assets/styles.css
@@ -102,7 +102,6 @@ body {
     align-items: stretch;
     height: 100vh;
     width: 100vw;
-    /*background-color: #f5f5f5;*/
     padding: 10px;
     box-sizing: border-box;
 }
@@ -115,40 +114,38 @@ body {
     margin-right: 20px;
 }
 
+#player-section, #dealer-section {
+    text-align: center;
+}
+
 /* Game Controls */
 #display-buttons {
     flex: 1;
-    background-color: lightblue;
     padding: 2px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
 }
 
 
-/*!* Button styling *!*/
-/*#display-buttons button {*/
-/*    padding: 1rem 2rem;*/
-/*    font-size: 1.1rem;*/
-/*    background-color: #4CAF50;*/
-/*    color: #fff;*/
-/*    border: none;*/
-/*    border-radius: 8px;*/
-/*    cursor: pointer;*/
-/*    transition: background-color 0.3s;*/
-/*    width: 80%;  !* Make buttons take up most of the width *!*/
-/*    margin-bottom: 10px;  !* Space between buttons *!*/
-/*}*/
+/* Button styling */
+#display-buttons button {
+    padding: 1rem 2rem;
+    font-size: 1.1rem;
+    background-color: #4CAF50;
+    color: #fff;
+    border: 1px #ffffff solid;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 80%;  /* Make buttons take up most of the width */
+    margin-bottom: 2px;  /* Space between buttons */
+}
 
-/*#display-buttons button:hover {*/
-/*    background-color: #45a025;*/
-/*}*/
-
-/*#display-buttons button:active {*/
-/*    background-color: #3e8e41;*/
-/*}*/
+#display-buttons button:hover {
+    background-color: #45a025;
+}
 
 #dealer-cards img #player-cards img{
     margin: 5px;
