--- a/assets/styles.css
+++ b/assets/styles.css
@@ -128,6 +128,13 @@ body {
     align-items: center;
 }
 
+#player-info-section, #buttons-section {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px; /* Add spacing if desired */
+    height: 50%;
+}
+
 
 /* Button styling */
 #display-buttons button {
