--- a/assets/styles.css
+++ b/assets/styles.css
@@ -160,3 +160,13 @@ body {
     border-radius: 5px;
 }
 
+#player-name {
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    text-align: center;
+}
+
