--- a/assets/styles.css
+++ b/assets/styles.css
@@ -31,13 +31,14 @@ body {
 
 #startGame {
     padding: 0.75rem 1.5rem;
-    font-size: 1rem;
+    font-size: 2rem;
     background-color: #4CAF50;
     color: #FFE4C4FF;
-    border: none;
+    border: 1px #FFE4C4FF solid;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    width: 50%;
 }
 
 #startGame:hover {
