--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,7 +14,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #1e1e1e;
+    background-image: radial-gradient(circle, #1e1e1e, #343638, #4a5152, #646d69, #86897e);
     color: #FFE4C4FF;
     text-align: center;
 }
@@ -135,7 +135,6 @@ body {
     margin-bottom: 10px; /* Add spacing if desired */
     height: 50%;
 }
-
 
 /* Button styling */
 #display-buttons button {
